fix: add resolution path
